...
            android:text="Setup guide" app:layout_constraintTop_toBottomOf="@id/background_explanation" app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/setup_guide" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
